--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Drumpfinator",
   "version": "1.0.0",
   "manifest_version": 2,
-  "description": "Drumpfinate the web",
+  "description": "Tired of seeing Donald Trump's name everywhere on the internet? Now you don't have to!",
   "homepage_url": "https://github.com/mark-monteiro/drumpfinator",
   "icons": {
     "16": "icons/icon16.png",
