--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Drumpfinator",
-  "version": "1.1.0",
+  "name": "Drumpfinator+",
+  "version": "1.1.1",
   "manifest_version": 2,
   "description": "Tired of seeing Donald Trump's name everywhere on the internet? Now you don't have to!",
   "homepage_url": "https://github.com/mark-monteiro/drumpfinator",
