disable codeclimate checks for repeated headers and line length in markdown files

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -11,6 +11,11 @@ engines:
     enabled: true
   markdownlint:
     enabled: true
+    checks:
+      MD024:
+        enabled: false
+      MD013:
+        enabled: false
 ratings:
   paths:
   - "**.js"
